syntax = "proto3";
package endless.stream.v1;
option go_package = "github.com/seanhagen/endless_stream/backend/grpc";

import "google/api/annotations.proto";
import "input.proto";
import "output.proto";

message CreateGame {}

message GameCreated {
  string code = 1;
}

service GameServer {
  rpc Create(CreateGame) returns (GameCreated) {
    option (google.api.http) = {
      get: "/v1/create"
    };
  }
  rpc State(stream Input) returns (stream Output){}
}